// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/SummaryCard Summary Card 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="summary-card"
  >
    <header
      className="summary-card__header"
    >
      <h2
        className="summary-card__title"
      >
        <a
          href="#"
        >
          My Property
        </a>
      </h2>
    </header>
    <MinimalTable
      data={
        Array [
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
          Object {
            "dob": "05/01/1975",
            "name": "Michael Scott",
            "relationship": "Friend",
          },
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
        ]
      }
      headers={
        Object {
          "dob": "application.household.member.dateOfBirth",
          "name": "t.name",
          "relationship": "t.relationship",
        }
      }
    >
      <Component
        cellClassName="px-5 py-3"
        data={
          Array [
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
            Object {
              "dob": "05/01/1975",
              "name": "Michael Scott",
              "relationship": "Friend",
            },
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
          ]
        }
        headers={
          Object {
            "dob": "application.household.member.dateOfBirth",
            "name": "t.name",
            "relationship": "t.relationship",
          }
        }
        tableClassName="td-plain th-plain"
      >
        <div
          style={
            Object {
              "overflowX": "auto",
            }
          }
        >
          <table
            className="w-full text-sm td-plain th-plain"
          >
            <thead>
              <Component>
                <tr>
                  <Component
                    key="header-0"
                  >
                    <th>
                      Name
                    </th>
                  </Component>
                  <Component
                    key="header-1"
                  >
                    <th>
                      Relationship
                    </th>
                  </Component>
                  <Component
                    key="header-2"
                  >
                    <th>
                      Date of Birth
                    </th>
                  </Component>
                </tr>
              </Component>
            </thead>
            <tbody>
              <Component
                id="standardrow-0"
                key="standardrow-0"
              >
                <tr
                  id="standardrow-0"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="name"
                    key="standardcol-0"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="relationship"
                    key="standardcol-1"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="dob"
                    key="standardcol-2"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="dob"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="standardrow-1"
                key="standardrow-1"
              >
                <tr
                  id="standardrow-1"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="name"
                    key="standardcol-0"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="name"
                    >
                      Michael Scott
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="relationship"
                    key="standardcol-1"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="relationship"
                    >
                      Friend
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="dob"
                    key="standardcol-2"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="dob"
                    >
                      05/01/1975
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="standardrow-2"
                key="standardrow-2"
              >
                <tr
                  id="standardrow-2"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="name"
                    key="standardcol-0"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="relationship"
                    key="standardcol-1"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="dob"
                    key="standardcol-2"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="dob"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
            </tbody>
          </table>
        </div>
      </Component>
    </MinimalTable>
  </div>
</div>
`;

exports[`Storyshots Prototypes/SummaryCard Summary Card Heading 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="summary-card"
  >
    <header
      className="summary-card__header bg-gray-100 border-b mb-2"
    >
      <h2
        className="summary-card__title"
      >
        <a
          href="#"
        >
          My Property
        </a>
      </h2>
      <p
        className="text-sm mt-3"
      >
        <span>
          1 Polk St, San Francisco, CA 94102
        </span>
        <span
          className="ml-4 pl-4 border-l border-gray-600"
        >
          Waitlist: 353
        </span>
      </p>
    </header>
    <MinimalTable
      data={
        Array [
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
          Object {
            "dob": "05/01/1975",
            "name": "Michael Scott",
            "relationship": "Friend",
          },
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
        ]
      }
      headers={
        Object {
          "dob": "application.household.member.dateOfBirth",
          "name": "t.name",
          "relationship": "t.relationship",
        }
      }
    >
      <Component
        cellClassName="px-5 py-3"
        data={
          Array [
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
            Object {
              "dob": "05/01/1975",
              "name": "Michael Scott",
              "relationship": "Friend",
            },
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
          ]
        }
        headers={
          Object {
            "dob": "application.household.member.dateOfBirth",
            "name": "t.name",
            "relationship": "t.relationship",
          }
        }
        tableClassName="td-plain th-plain"
      >
        <div
          style={
            Object {
              "overflowX": "auto",
            }
          }
        >
          <table
            className="w-full text-sm td-plain th-plain"
          >
            <thead>
              <Component>
                <tr>
                  <Component
                    key="header-0"
                  >
                    <th>
                      Name
                    </th>
                  </Component>
                  <Component
                    key="header-1"
                  >
                    <th>
                      Relationship
                    </th>
                  </Component>
                  <Component
                    key="header-2"
                  >
                    <th>
                      Date of Birth
                    </th>
                  </Component>
                </tr>
              </Component>
            </thead>
            <tbody>
              <Component
                id="standardrow-0"
                key="standardrow-0"
              >
                <tr
                  id="standardrow-0"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="name"
                    key="standardcol-0"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="relationship"
                    key="standardcol-1"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="dob"
                    key="standardcol-2"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="dob"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="standardrow-1"
                key="standardrow-1"
              >
                <tr
                  id="standardrow-1"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="name"
                    key="standardcol-0"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="name"
                    >
                      Michael Scott
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="relationship"
                    key="standardcol-1"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="relationship"
                    >
                      Friend
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="dob"
                    key="standardcol-2"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="dob"
                    >
                      05/01/1975
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="standardrow-2"
                key="standardrow-2"
              >
                <tr
                  id="standardrow-2"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="name"
                    key="standardcol-0"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="relationship"
                    key="standardcol-1"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="dob"
                    key="standardcol-2"
                  >
                    <td
                      className="px-5 py-3"
                      data-label="dob"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
            </tbody>
          </table>
        </div>
      </Component>
    </MinimalTable>
  </div>
</div>
`;
